add code main-footer && site-footer

--- a/index.html
+++ b/index.html
@@ -59,33 +59,33 @@
 			<!-- MAIN INFO START -->
 			<div class="main-info">
 				<div class="container">
-					<span class="main-info-line"></span>
-					<h2 class="main-info-title">Nega aynan Akademik-nashi</h2>
-					<ul class="main-info-list">
-						<li class="main-info-item">
-							<div class="main-info-icon">
+					<span class="main-info__line"></span>
+					<h2 class="main-info__title">Nega aynan Akademik-nashi</h2>
+					<ul class="main-info__list">
+						<li class="main-info__item">
+							<div class="main-info__icon">
 								<img src="img/buyurma-icon.svg" alt="rasim" width="56" height="56" />
 							</div>
-							<h3 class="main-info-item-title">Osonbuyurtma qilish</h3>
-							<p class="main-info-item-text">
+							<h3 class="main-info-item__title">Osonbuyurtma qilish</h3>
+							<p class="main-info-item__text">
 								Akademnashr uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.
 							</p>
 						</li>
-						<li class="main-info-item">
-							<div class="main-info-icon">
+						<li class="main-info__item">
+							<div class="main-info__icon">
 								<img src="img/sparkles.svg" alt="rasim" height="56" width="56" />
 							</div>
-							<h3 class="main-info-item-title">Eng sara kitoblar</h3>
-							<p class="main-info-item-text">
+							<h3 class="main-info-item__title">Eng sara kitoblar</h3>
+							<p class="main-info-item__text">
 								Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.
 							</p>
 						</li>
-						<li class="main-info-item">
-							<div class="main-info-icon">
+						<li class="main-info__item">
+							<div class="main-info__icon">
 								<img src="img/yetkazib-berish-icon.svg" alt="rasim" width="56" height="56" />
 							</div>
-							<h3 class="main-info-item-title">Tez yetkazib berish</h3>
-							<p class="main-info-item-text">
+							<h3 class="main-info-item__title">Tez yetkazib berish</h3>
+							<p class="main-info-item__text">
 								O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.
 							</p>
 						</li>
@@ -95,18 +95,18 @@
 			<!-- PROMO -->
 			<section class="promo">
 				<div class="container promo-container">
-					<div class="promo-info">
-						<h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-						<p class="promo-text">
+					<div class="promo__info">
+						<h2 class="promo__heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
+						<p class="promo__text">
 							Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.
 						</p>
-						<p class="promo-text2">
-							Aksiyadagi eng katta to’plamda <span class="promo-span">50 ta kitob</span>ni
-							<span class="promo-span">350 ming</span> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
+						<p class="promo__text2">
+							Aksiyadagi eng katta to’plamda <span class="promo__span">50 ta kitob</span>ni
+							<span class="promo__span">350 ming</span> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
 						</p>
 						<button class="btn">Buyurtma berish</button>
 					</div>
-					<div class="promo-img-wrapper">
+					<div class="promo-img__wrapper">
 						<img src="img/sale-img.jpg" alt="promo-book" width="440" height="440" />
 					</div>
 				</div>
@@ -114,11 +114,11 @@
 		</main>
 		<footer class="site-footer">
 			<div class="container">
-				<div class="site-footer-top">
+				<div class="site-footer__top">
 					<img src="./img/logo.svg" alt="svg" />
-					<ul class="site-footer-top-list">
-						<li class="site-footer-top-item">
-							<a class="site-footer-top-link" target="_blank" href="https://t.me/Axmedov_Abdullo">
+					<ul class="site-footer__top-list">
+						<li class="site-footer__top-item">
+							<a class="site-footer__top-link" target="_blank" href="https://t.me/Axmedov_Abdullo">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M12 0C5.376 0 0 5.376 0 12C0 18.624 5.376  24 12 24C18.624 24 24 18.624 24 12C24 5.376 18.624 0 12 0ZM17.568 8.16C17.388 10.056 16.608 14.664 16.212 16.788C16.044 17.688 15.708 17.988 15.396 18.024C14.7 18.084 14.172 17.568 13.5 17.124C12.444 16.428 11.844 15.996 10.824 15.324C9.636 14.544 10.404 14.112 11.088 13.416C11.268 13.236 14.34 10.44 14.4 10.188C14.412 10.152 14.412 10.044 14.34 9.972C14.268 9.912 14.172 9.936 14.088 9.948C13.98 9.972 12.3 11.088 9.024 13.296C8.544 13.62 8.112 13.788 7.728 13.776C7.296 13.764 6.48 13.536 5.868 13.332C5.112 13.092 4.524 12.96 4.572 12.54C4.596 12.324 4.896 12.108 5.46 11.88C8.964 10.356 11.292 9.348 12.456 8.868C15.792 7.476 16.476 7.236 16.932 7.236C17.028 7.236 17.256 7.26 17.4 7.38C17.52 7.476 17.556 7.608 17.568 7.704C17.556 7.776 17.58 7.992 17.568 8.16Z"
